<resources>
    <string name="app_name">Rider</string>

    <!-- Activity title strings -->
    <string name="title_activity_navigation">Navigation</string>

    <!-- Location Permission strings -->
    <string name="location_permission_explanation">Allow this app to use your location to
        find nearby bikes or parking?</string>
    <string name="location_permission_explanation_action">Let\'s do it!</string>

    <!-- FetchAddressIntentService strings -->
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Service not available.</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude.</string>
    <string name="no_address_found">No address found.</string>
    <string name="address_found">Address found.</string>

    <!-- SearchLocation strings -->
    <string name="want">I want to…</string>
    <string name="ride">ride! %1$s</string>
    <string name="dock">dock! %1$s</string>
    <string name="where">From where?</string>
    <string name="my_location">Use my location</string>
    <string name="enter_location">Enter a location</string>
    <string name="getting_location">Getting location…</string>
    <string name="loading_stations">Loading Stations…</string>

    <!-- Bikes card strings -->
    <string name="bike_image_content_description">Bike image</string>
    <string name="available_bikes">%1$d available bikes</string>
    <string name="distance_metres">%1$.0fm away</string>
    <string name="distance_kilometres">%1$.2fkm away</string>
    <string name="last_updated">Last updated: %1$s</string>
    <string name="bikes_swipe_instructions">&lt;- Swipe left if you don\'t like what you
        see.\nSwipe right if you want to ride! -&gt;</string>

    <!-- Navigation strings -->
    <string name="start">Start</string>
    <string name="finish">Finish</string>

</resources>
